--- a/lightouthydra.html
+++ b/lightouthydra.html
@@ -8,7 +8,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-image: url('Project_04-04_Full HD 1080p_MEDIUM_FR30.mp4'); /* Initial background */
+    background-image: url('69998052 (2).png'); /* Initial background */
     background-size: cover;
     background-repeat: no-repeat;
     margin: 0;
@@ -74,7 +74,7 @@
 
     function createGrid() {
       //reset background
-      body.style.backgroundImage = "url('Project_04-04_Full HD 1080p_MEDIUM_FR30.mp4')";
+      body.style.backgroundImage = "url('52903597 (1).png')";
 
       const gridElement = document.getElementById("grid");
       gridElement.innerHTML = "";
