--- a/lightouthydra.html
+++ b/lightouthydra.html
@@ -37,7 +37,7 @@
   }
 
   .cell.on {
-    background-image: url('Project_04-04(1)_Full HD 1080p_MEDIUM_FR30_(3).mp4');
+    background-image: url('52903597 (1).png');
     background-color: transparent;
   }
 
